Fix background white spaces on resize

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -95,7 +95,12 @@ a {
   padding-bottom: 20px;
 }
 
-#app, #main-content-bg {
+#app {
+  height: 100%;
+  overflow: auto;
+}
+
+body, #main-content-bg {
   background: url('/images/bg.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
